<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gabrielvalforte.grimoire.MagiaActivity">

    <ScrollView
        android:id="@+id/ScrlView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <RelativeLayout
            android:id="@+id/layoutForScroll"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/tvMdNome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="Large Text"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/tvMdPag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tvMdNome"
                android:text="Small Text"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <LinearLayout
                android:id="@+id/linPratica"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvMdPag">

                <TextView
                    android:id="@+id/tvMdPratica"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/mag_pratica"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvMdPraticaD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/mag_pratica"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linAcao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linPratica">

                <TextView
                    android:id="@+id/tvMdAcao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mag_acao"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvMdAcaoD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/mag_pratica"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linAspecto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linAcao">

                <TextView
                    android:id="@+id/tvMdAspecto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mag_aspecto"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvMdAspectoD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/mag_pratica"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linCusto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linAspecto">

                <TextView
                    android:id="@+id/tvMdCusto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mag_custo"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvMdCustoD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/mag_pratica"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linDuracao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linCusto">

                <TextView
                    android:id="@+id/tvMdDuracao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mag_duracao"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvMdDuracaoD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/mag_pratica"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvMdDescri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/linDuracao"
                android:layout_marginTop="10dp"
                android:text="Medium Text"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/tvMdNomeCl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tvMdDescri"
                android:layout_marginTop="10dp"
                android:text="Medium Text"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/linParada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvMdNomeCl">

                <TextView
                    android:id="@+id/tvMdParada"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/mag_parada"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvMdParadaD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvMdParada"
                    android:text="@string/mag_pratica"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </RelativeLayout>

            <TextView
                android:id="@+id/tvMdDescriCl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linParada"
                android:layout_marginTop="10dp"
                android:text="Medium Text"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
